# g2o

g2o/: CMakeLists.txt
g2o/core/: optimizable_graph.cpp
g2o/customer/: CMakeLists.txt
g2o/customer/2dslam_with_scale/: 2dslam_with_scale.cpp  CMakeLists.txt  edge_se2_with_scale.cpp  edge_se2_with_scale.h  se2_with_scale.h  types_scaled_2d.cpp  types_scaled_2d.h  vertex_se2_with_scale.cpp  vertex_se2_with_scale.h
g2o/customer/scale_optimize/: CMakeLists.txt  EdgeScale.cpp  EdgeScale.h  VertexScale.cpp  VertexScale.h  scale_optimize.cpp  types_scale.cpp  types_scale.h  vector1d.h
